--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 pytube==12.1.0
+pytubefix==8.3.0
 six==1.16.0
 soupsieve==2.3.2.post1
 Werkzeug==2.2.2
